trying to fix spacing issues

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -62,7 +62,7 @@ body {
   font-weight:400;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h5, h6 {
   color:#222;
   margin:0 0 20px;
 }
@@ -91,6 +91,7 @@ h3, h4, h5, h6 {
 h4 {
   margin: 0px;
   padding: 0px;
+  line-height: 1;
 }
 
 a {
